--- a/merchant/package.json
+++ b/merchant/package.json
@@ -23,7 +23,7 @@
     "@nestjs/core": "10.0.3",
     "@nestjs/microservices": "10.0.3",
     "@nestjs/platform-express": "10.0.3",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "4.7.1",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
