--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
+      - rabbitmq
     ports:
       - '3000:3000'
     volumes:
@@ -32,6 +33,15 @@ services:
       - 4200:4200
     volumes:
       - ./merchant-frontend:/app
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=1234
 
 volumes:
   postgres-data:
