--- a/merchant/package.json
+++ b/merchant/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "crypto-js": "^4.1.1",
+    "prisma": "4.7",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1",
